change work dir

--- a/.frogbot/frogbot-config.yml
+++ b/.frogbot/frogbot-config.yml
@@ -32,8 +32,8 @@
 
       # [Optional, Default: root directory]
       # List of relative path's to the projects directories in the git repository
-        workingDirs:
-          - "frontend/"
+        # workingDirs:
+        #   - ""
 
       # [Mandatory for pip only if using requirements file, Default: pip install .]
       # The requirements file name that used to install dependencies in case of pip package manager
