--- a/.frogbot/frogbot-config.yml
+++ b/.frogbot/frogbot-config.yml
@@ -28,7 +28,7 @@
       projects:
       # [Mandatory for projects which use npm, yarn 2, nuget and dotnet to download their dependencies]
       # Installation command (e.g. npm i, nuget restore)
-      - installCommand: "yarn"
+      - installCommand: "npm i"
 
       # [Optional, Default: root directory]
       # List of relative path's to the projects directories in the git repository
